<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.audia4b6.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="364dp"
        android:text="--km"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/car_image"
        android:layout_width="368dp"
        android:layout_height="305dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="386dp"
        android:contentDescription="@string/car_image_description"
        android:src="@drawable/car"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="366dp"
        android:layout_height="54dp"
        android:layout_marginTop="637dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/nav_car_Button"
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_background"
            android:contentDescription="@string/nav_car_button_description"
            android:src="@drawable/nav_car" />

        <ImageButton
            android:id="@+id/nav_map_Button"
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_background"
            android:contentDescription="@string/nav_map_button_description"
            android:src="@drawable/nav_map" />

        <ImageButton
            android:id="@+id/user_Button"
            android:layout_width="112dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_background"
            android:contentDescription="@string/user_button_description"
            android:src="@drawable/nav_user" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="620dp"
        android:layout_marginBottom="153dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/unlock_Button"
            android:layout_width="118dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_background"
            android:contentDescription="@string/unlock_button_description"
            android:src="@drawable/ic_unlock" />

        <ImageButton
            android:id="@+id/lock_Button"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:contentDescription="@string/lock_button_description"
            android:src="@drawable/ic_lock" />

        <ImageButton
            android:id="@+id/climate_Button"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_background"
            android:contentDescription="@string/climate_button_description"
            android:src="@drawable/ic_climate" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:layout_marginTop="392dp"
        android:layout_marginBottom="306dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="50"
        android:progressTint="#00FF05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/carStatusTextView"
        android:layout_width="165dp"
        android:layout_height="43dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="504dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="160dp"
        android:text="Status: Unbekannt"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
